@@ -1,5 +1,5 @@
 #define VERSION_MAJOR      0
 #define VERSION_MINOR      3
 #define VERSION_REVISION   38
-#define VERSION_BETA       -beta
-#define VERSION_BUILD      4
+#define VERSION_BETA       -rc
+#define VERSION_BUILD      1
